--- a/index.html
+++ b/index.html
@@ -1455,7 +1455,10 @@
         <i class="fa-li fab fa-weixin fa-2x" aria-hidden="true"></i>
         <a href="/authors/admin/qrcode.jpg" >PsChngz</a>
       </li>
-      
+      <li>
+        <i class="fa-li fas fa-envelope fa-2x" aria-hidden="true"></i>
+        <span id="person-email"><a href="./heart.html"></a></span>
+      </li>
 
     </ul>
 
