--- a/index.html
+++ b/index.html
@@ -1459,7 +1459,10 @@
         <i class="fa-li fas fa-envelope fa-2x" aria-hidden="true"></i>
         <span id="person-email"><a href="./heart.html"></a></span>
       </li>
-
+      <li>
+        <i class="fa-li fas fa-envelope fa-2x" aria-hidden="true"></i>
+        <span id="person-email"><a href="./heart2.html"></a></span>
+      </li>
     </ul>
 
     
