--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@
       <div class="col py-2">
         <div class="card">
           <div class="card-body">
-            <h4 class="card-title exp-title text-muted mt-0 mb-1">NAACL2022 Workshop AutoSimTrans 3rd Place</h4>
+            <h4 class="card-title exp-title text-muted mt-0 mb-1">NAACL2022 Workshop AutoSimTrans | 3rd Place</h4>
             <h4 class="card-title exp-company text-muted my-0"><a href="https://aistudio.baidu.com/aistudio/competition/detail/148/0/introduction" target="_blank" rel="noopener">Aistudio. Baidu</a></h4>
             <div class="text-muted exp-meta">
               Mar 2022 –
@@ -785,8 +785,8 @@
       <div class="col py-2">
         <div class="card">
           <div class="card-body">
-            <h4 class="card-title exp-title text-muted mt-0 mb-1">2022 International Competion of Autonomous Running Robots Excellence Award</h4>
-            <h4 class="card-title exp-company text-muted my-0"><a href="" target="_blank" rel="noopener">022 Running Robot Organizeing Committeee</a></h4>
+            <h4 class="card-title exp-title text-muted mt-0 mb-1">2022 International Competion of Autonomous Running Robots | Excellence Award</h4>
+            <h4 class="card-title exp-company text-muted my-0"><a href="" target="_blank" rel="noopener">2022 Running Robot Organizeing Committeee</a></h4>
             <div class="text-muted exp-meta">
               Mar 2022 –
               
