--- a/invite/invitation.html
+++ b/invite/invitation.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>The 1st</h1>
-    <h1 style="color:#a03939;">City Work</h1>
+    <h1 style="color:#a03939;">City Walk</h1>
     <h3>漫步舟山 &nbsp;发现世界</h3>
     <hr>
     <h4 style="color:black;" >从此刻感受世界的美妙</h4>
